pushing fix to rel paths

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="assets/style.css">
 	
 </head>
 <body>
@@ -17,38 +17,38 @@
 		<button type="button" class="btn btn-success">Start</button>
 		<div class="row">
 			<div class="mole">
-				<img src="./assets/hidden.jpeg" id="1" data-hidden="./assets/hidden.jpeg" data-showing="./assets/showing.jpeg" data-state="hidden">
+				<img src="assets/hidden.jpeg" id="1" data-hidden="assets/hidden.jpeg" data-showing="assets/showing.jpeg" data-state="hidden">
 			</div> 
 			<div class="mole">
-				<img src="./assets/hidden.jpeg" id="2" data-hidden="./assets/hidden.jpeg" data-showing="./assets/showing.jpeg" data-state="hidden">
+				<img src="assets/hidden.jpeg" id="2" data-hidden="assets/hidden.jpeg" data-showing="assets/showing.jpeg" data-state="hidden">
 			</div> 
 			<div class="mole">
-				<img src="./assets/hidden.jpeg" id="3" data-hidden="./assets/hidden.jpeg" data-showing="./assets/showing.jpeg" data-state="hidden">
+				<img src="assets/hidden.jpeg" id="3" data-hidden="assets/hidden.jpeg" data-showing="assets/showing.jpeg" data-state="hidden">
 			</div>
 		</div>
 		<div class="row">
 			<div class="mole">
-				<img src="./assets/hidden.jpeg" id="4" data-hidden="./assets/hidden.jpeg" data-showing="./assets/showing.jpeg" data-state="hidden">
+				<img src="assets/hidden.jpeg" id="4" data-hidden="assets/hidden.jpeg" data-showing="assets/showing.jpeg" data-state="hidden">
 			</div> 
 			<div class="mole">
-				<img src="./assets/hidden.jpeg" id="5" data-hidden="./assets/hidden.jpeg" data-showing="./assets/showing.jpeg" data-state="hidden">
+				<img src="assets/hidden.jpeg" id="5" data-hidden="assets/hidden.jpeg" data-showing="assets/showing.jpeg" data-state="hidden">
 			</div> 
 			<div class="mole">
-				<img src="./assets/hidden.jpeg" id="6" data-hidden="./assets/hidden.jpeg" data-showing="./assets/showing.jpeg" data-state="hidden">
+				<img src="assets/hidden.jpeg" id="6" data-hidden="assets/hidden.jpeg" data-showing="assets/showing.jpeg" data-state="hidden">
 			</div>
 		</div>
 		<div class="row">
 			<div class="mole">
-				<img src="./assets/hidden.jpeg" id="7" data-hidden="./assets/hidden.jpeg" data-showing="./assets/showing.jpeg" data-state="hidden">
+				<img src="assets/hidden.jpeg" id="7" data-hidden="assets/hidden.jpeg" data-showing="assets/showing.jpeg" data-state="hidden">
 			</div> 
 			<div class="mole">
-				<img src="./assets/hidden.jpeg" id="8" data-hidden="./assets/hidden.jpeg" data-showing="./assets/showing.jpeg" data-state="hidden">
+				<img src="assets/hidden.jpeg" id="8" data-hidden="assets/hidden.jpeg" data-showing="assets/showing.jpeg" data-state="hidden">
 			</div> 
 			<div class="mole">
-				<img src="./assets/hidden.jpeg" id="9" data-hidden="./assets/hidden.jpeg" data-showing="./assets/showing.jpeg" data-state="hidden">
+				<img src="assets/hidden.jpeg" id="9" data-hidden="assets/hidden.jpeg" data-showing="assets/showing.jpeg" data-state="hidden">
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="./assets/logic.js"></script>
+	<script type="text/javascript" src="assets/logic.js"></script>
 </body>
 </html>
